--- a/src/static/css/detail.css
+++ b/src/static/css/detail.css
@@ -33,7 +33,25 @@ li {
     color: white;
     margin-right: 10px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 .episode:hover {
     background-color: rgb(41, 207, 132);
+}
+.subgroup {
+    float: left;
+    width: 80px;
+    height: 30px;
+    cursor: pointer;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.subgroup-container {
+    width: 800px;
+    overflow: auto;
+}
+.subgroup-seed {
+    clear: both;
+    display: none;
 }
