fix anime name in detail page

--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -17,7 +17,7 @@
             <img src="{{ url_for('static', filename='img/anime_list/'+anime.img_url.split('/')[4]) }}" alt="" height="280px" width="210px">
         </div>
         <div class="anime-info">
-            <div class="anime-name">
+            <div class="detail-anime-name">
                 {{ anime.anime_name }}
             </div>
             <div class="button-container">
