--- a/src/static/css/detail.css
+++ b/src/static/css/detail.css
@@ -10,9 +10,10 @@
     display: flex; 
     flex-direction: column;
 }
-.anime-name {
+.detail-anime-name {
     margin-bottom: 10px;
     font-size: 20px;
+    width: 500px;
 }
 li {
     list-style-type: none;
