[Feature] add pause&resume button in download page

--- a/src/static/css/download.css
+++ b/src/static/css/download.css
@@ -75,7 +75,7 @@ progress::-webkit-progress-value{
     color: white;
     cursor: pointer;
 }
-#stop:hover {
+#pause:hover {
     background-color: orange;
 }
 #resume:hover {
