--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -10,6 +10,14 @@
     <script src="{{ url_for('static', filename='js/detail.js') }}"></script>
 {% endblock %}
 
+{% block style %}
+<style>
+    .anime-button {
+        display: none;
+    }
+</style>
+{% endblock %}
+
 {% block body %}
 <div>
     <div class="anime-info-container">
