--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -1,7 +1,3 @@
-.container {
-    display: flex;
-    flex-direction: column;
-}
 a {
     text-decoration: none;
     color: inherit;
@@ -11,6 +7,7 @@ a {
     display: flex;
     flex-direction: column;
     margin-left: 50px;
+    margin-right: 45px;
 }
 .lside-button {
     background-color: #d6d6d6;
@@ -23,4 +20,20 @@ a {
 }
 .lside-button:hover {
     background-color: rgb(15, 161, 115);
+}
+.container {
+    display: flex;
+    flex-direction: column;
+}
+.navi {
+    display: block;
+    margin-bottom: 20px;
+    width: 1000px;
+}
+.broadcast {
+    float: left;
+    margin-left: 5px;
+}
+.navi-with-button {
+    margin-bottom: 20px;
 }
