--- a/src/templates/setting.html
+++ b/src/templates/setting.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block body %}
-<div style="margin-left: 45px;">
+<div>
     <button class="start-button">原神启动!</button>
     <button class="stop-button">原神关闭!</button>
     <!-- <button class="modify-button">修改间隔</button> -->
