modify qb max downloading number

--- a/src/templates/setting.html
+++ b/src/templates/setting.html
@@ -19,5 +19,9 @@
         <input type="submit" value="Submit">
     </form>
     <div id="daemon-pid"></div>
+
+    <div style="display: inline-block;">最大同时下载数:</div>
+    <div id="max-download-input" style="display: inline-block;"></div>
+    <button onclick="modifyMaxActiveDownloads()">修改</button>
 </div>
 {% endblock %}
