add sync button

--- a/src/templates/setting.html
+++ b/src/templates/setting.html
@@ -23,5 +23,11 @@
     <div style="display: inline-block;">最大同时下载数:</div>
     <div id="max-download-input" style="display: inline-block;"></div>
     <button onclick="modifyMaxActiveDownloads()">修改</button>
+    <div>
+        <button onclick="syncAnime()">本地同步</button>
+    </div>
+
+    
+    
 </div>
 {% endblock %}
